# Tira-labra-2022

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
Documentation/: Manual.md  Weekly_report_1.md  Weekly_report_2.md  Weekly_report_3.md  Weekly_report_4.md  Weekly_report_5.md  Weekly_report_6.md  implementation_report.md  maarittely.md  project_specification.md  testing_report.md
src/: launch.py  params.py  performance.py
src/entities/: rect.py
src/services/: BSP.py  bsp.py  cellular_automata.py  corridors.py  filewriter.py  floodfill.py  logic.py  randomgen.py
src/tests/: bsp_test.py  cellular_automata_test.py  corridors_test.py  filewriter_test.py  floodfill_test.py  logic_test.py  randomgen_test.py  rect_test.py
src/ui/: ui.py
